--- a/login.html
+++ b/login.html
@@ -7,8 +7,12 @@
     <title>Login - Estacionamiento</title>
 </head>
 <body>
-    <form id="form-login">
+    <section class="form-login">
+        <form action="#">
 
-    </form>
+                <img src="./img/logo.png"/>
+
+        </form>
+    </section>
 </body>
 </html>
