PERO MIRA LO QUE ESTA ESTE LOGIN PAPA

--- a/login.html
+++ b/login.html
@@ -10,14 +10,19 @@
     <title>Login - Estacionamiento</title>
 </head>
 <body>
-    <section class="form-login">
-        <form action="#">
-
-                <img src="./img/logo.png"/> <br>
-                <input type="email" placeholder="Email"/> <br>
-                <input type="password" placeholder="Contraseña"/> <br>
-                <button >Ingresar</button>        
-        </form>
-    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <section class="form-login">
+                    <form action="#">
+                        <img src="./img/logo.png">
+                        <input type="email" placeholder="Email" class="form-control"/>
+                        <input type="password" class="form-control" placeholder="Contraseña"/>
+                        <button class="btn btn-lg btn-primary btn-block">Ingresar</button>             
+                    </form>                 
+                </section>  
+            </div>     
+        </div>           
+    </div>
 </body>
 </html>
