--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col-md-3"></div>
             <div class="col-md-4">
                 <section class="form-login">
                     <form action="#">
