--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <section class="form-login">
                     <form action="#">
                         <img src="./img/logo.png">
-                        <input type="email" placeholder="Email" class="form-control"/>
+                        <input type="text" placeholder="Email" class="form-control"/>
                         <input type="password" class="form-control" placeholder="Contraseña"/>
                         <button class="btn btn-lg btn-primary btn-block">Ingresar</button>             
                     </form>                 
