--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <section class="form-login">
-                    <form action="#">
+                    <form>
                         <img src="./img/logo.png">
                         <input type="text" placeholder="Email" class="form-control"/>
                         <input type="password" class="form-control" placeholder="Contraseña"/>
