--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 <body>
     <div class="container">
         <h3>Estacionamiento</h3>
-        <ul class="nav nav-tabs">
-            <li class="active"><a>Tabla</a></li>
-            <li><a>Admin</a></li>
-        </ul>
+        <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-5">
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-primary active">
+                            <input type="radio" name="options" checked> Grilla
+                        </label>
+                        <label class="btn btn-primary">
+                            <input type="radio" name="options"> Admin
+                        </label>
+                    </div>
+                </div>
+        </div>
     </div>
 </body>
 </html>
