--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,13 +14,13 @@
     <div class="container">
         <h3>Estacionamiento</h3>
         <div class="row">
-                <div class="col-md-5"></div>
+                <div class="col-md-3"></div>
                 <div class="col-md-5">
                     <div class="btn-group" data-toggle="buttons">
-                        <label class="btn btn-primary active">
+                        <label class="btn btn-lg btn-primary active tab-btn">
                             <input type="radio" name="options" checked> Grilla
                         </label>
-                        <label class="btn btn-primary">
+                        <label class="btn btn-lg btn-primary tab-btn">
                             <input type="radio" name="options"> Admin
                         </label>
                     </div>
