--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 <body>
     <div class="container">
-        <h3>Estacionamiento</h3>
+        
+            <nav class="navbar navbar-default navbar-light bg-faded">
+                    <a class="navbar-brand" href="#">Sticky top</a>
+                  </nav>
+
+                  
+
         <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-5">
