favicon y main.css

--- a/login.html
+++ b/login.html
@@ -2,13 +2,20 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Login - Estacionamiento</title>
+    <title>Login - ParKING</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-default navbar-light bg-faded">
+            <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+        </nav>
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-md-4"></div>
