--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Estacionamiento</title>
+    <title>ParKING</title>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-default navbar-light bg-faded">
+            <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+        </nav>
+    </header>
     <div class="container">
-        
-            <nav class="navbar navbar-default navbar-light bg-faded">
-                    <a class="navbar-brand" href="#">Sticky top</a>
-                  </nav>
-
-                  
-
         <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-5">
