--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,30 +7,52 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>ParKING</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-default navbar-light bg-faded">
-            <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+    <header class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <nav class="container w-100">          
+            <div class="d-flex justify-content-between hidden-lg-up">
+                <a class="navbar-brand" href="/">
+                    <a class="nav-item" href="#"><img width="190" height="190" src="./img/logo.png"></a>
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+           
+            <div class="navbar-collapse collapse" id="bd-main-nav" aria-expanded="false" style="">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-item" href="#"><img width="190" height="190" src="./img/logo.png"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link">Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link ">Examples</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
+
+            <!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                    <a class="nav-item" href="#"><img width="190" src="./img/logo.png"></a>
+                    <div class="collapse navbar-collapse">
+                        <a class="nav-item nav-link" href="#">Features</a>
+                        <a class="nav-item nav-link" href="#">Pricing</a>
+                      </div>
+                    </div>
+                  </nav> -->
     <div class="container">
         <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-5">
-                    <div class="btn-group" data-toggle="buttons">
-                        <label class="btn btn-lg btn-primary active tab-btn">
-                            <input type="radio" name="options" checked> Grilla
-                        </label>
-                        <label class="btn btn-lg btn-primary tab-btn">
-                            <input type="radio" name="options"> Admin
-                        </label>
-                    </div>
-                </div>
+                
         </div>
     </div>
 </body>
