--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,11 +16,9 @@
 
 <body>
     <header class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <nav class="container w-100">          
+        <a class="nav-brand" href="#"><img width="190" src="./img/logo.png"></a>
+        <nav class="ml-auto">          
             <div class="d-flex justify-content-between hidden-lg-up">
-                <a class="navbar-brand" href="/">
-                    <a class="nav-item" href="#"><img width="190" height="190" src="./img/logo.png"></a>
-                </a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -28,28 +26,16 @@
            
             <div class="navbar-collapse collapse" id="bd-main-nav" aria-expanded="false" style="">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-item" href="#"><img width="190" height="190" src="./img/logo.png"></a>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link">Grilla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-item nav-link">Documentation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link ">Examples</a>
+                        <a class="nav-item nav-link ">Admin</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-
-            <!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-                    <a class="nav-item" href="#"><img width="190" src="./img/logo.png"></a>
-                    <div class="collapse navbar-collapse">
-                        <a class="nav-item nav-link" href="#">Features</a>
-                        <a class="nav-item nav-link" href="#">Pricing</a>
-                      </div>
-                    </div>
-                  </nav> -->
     <div class="container">
         <div class="row">
                 
