--- a/public_html/login.html
+++ b/public_html/login.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-default navbar-light bg-faded">
-            <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+        <nav class="navbar navbar-inverse bg-primary">
+            <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
         </nav>
     </header>
     <div class="container">
