--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,27 +15,13 @@
 </head>
 
 <body>
-    <header class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="nav-brand" href="#"><img width="190" src="./img/logo.png"></a>
-        <nav class="ml-auto">          
-            <div class="d-flex justify-content-between hidden-lg-up">
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-           
-            <div class="navbar-collapse collapse" id="bd-main-nav" aria-expanded="false" style="">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-item nav-link">Grilla</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link ">Admin</a>
-                    </li>
-                </ul>
-            </div>
+    <header>
+        <nav class="navbar navbar-inverse bg-primary">
+            <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
         </nav>
     </header>
+
+            <!--  -->
     <div class="container">
         <div class="row">
                 
