--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@
             <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
         </nav>
     </header>
-        <section class="row tabla-container">
+        <section class="row container-section">
             <table class="table">
                 <thead>
                     <tr>
