--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
     </header>
         <section class="row container-section">
             <table class="table">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">First Name</th>
