--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,8 +16,13 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-inverse bg-primary">
-            <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
+        <nav class="navbar ml-auto navbar-inverse bg-primary">
+            <form class="form-inline my-2 my-lg-0">
+                <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
+                <a href="#" class="btn btn-success btn-lg">
+                    <span class="glyphicon glyphicon-print"></span> Print 
+                </a>
+            </form>
         </nav>
     </header>
         <section class="row container-section">
