--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-fixed-top">
             <form class="form-inline my-2 my-lg-0">
                 <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
-                <a href="#" class="btn btn-success btn-lg">
+                <a href="#" style="float:right" class="btn-salir btn btn-success btn-lg">
                     <span class="glyphicon glyphicon-print"></span> Salir 
                 </a>
             </form>
