--- a/public_html/login.html
+++ b/public_html/login.html
@@ -11,16 +11,11 @@
     <title>Login - ParKING</title>
 </head>
 <body>
-        <header>
-                <nav class="navbar navbar-fixed-top">
-                    <form class="form-inline my-2 my-lg-0">
-                        <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
-                        <a href="#" class="btn btn-success btn-lg">
-                            <span class="glyphicon glyphicon-print"></span> Salir 
-                        </a>
-                    </form>
-                </nav>
-            </header>
+    <header>
+        <nav class="navbar navbar-fixed-top">
+            <a class="nav-item" href="#"><img class="nav-logo" width="220" src="./img/logo-blanco.png"></a>
+        </nav>
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-md-4"></div>
