--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,8 +17,8 @@
         <nav class="navbar navbar-fixed-top">
             <form class="form-inline my-2 my-lg-0">
                 <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
-                <a href="#" style="float:right" class="btn-salir btn btn-success btn-lg">
-                    <span class="glyphicon glyphicon-print"></span> Salir 
+                <a href="#" class="navbar-right btn-salir btn btn-success btn-lg">
+                    Salir <span class="glyphicon glyphicon-log-out"></span> 
                 </a>
             </form>
         </nav>
