--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,6 +24,11 @@
         </nav>
     </header>
         <section class="row container-section">
+            <h2>Estacionamiento</h2>
+            <div class="btn-group btn-ab" role="group" aria-label="...">
+                <button type="button" class="btn-success btn btn-lg">Agregar</button>
+                <button type="button" class="btn-danger btn btn-lg">Sacar</button>
+            </div>
             <table class="table">
                 <thead class="thead-dark">
                     <tr>
@@ -34,6 +39,30 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
                     <tr>
                         <th scope="row">1</th>
                         <td>Mark</td>
@@ -54,6 +83,14 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary">1</button>
+                    <button type="button" class="btn btn-secondary">2</button>
+                    <button type="button" class="btn btn-secondary">3</button>
+                    <button type="button" class="btn btn-secondary">4</button>
+                </div>
+            </div>
         </section>
 </body>
 </html>
