--- a/public_html/index.html
+++ b/public_html/index.html
@@ -85,10 +85,16 @@
             </table>
             <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </button>
                     <button type="button" class="btn btn-primary">1</button>
                     <button type="button" class="btn btn-primary">2</button>
                     <button type="button" class="btn btn-primary">3</button>
                     <button type="button" class="btn btn-primary">4</button>
+                    <button type="button" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </button>
                 </div>
             </div>
         </section>
