--- a/public_html/index.html
+++ b/public_html/index.html
@@ -83,8 +83,8 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
-                <div class="btn-group mr-2" role="group" aria-label="First group">
+            <div class="btn-toolbar mb-3" role="toolbar">
+                <div class="btn-group mr-2" role="group">
                     <button type="button" class="btn btn-primary">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </button>
