--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <script src="./js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>ParKING</title>
@@ -17,7 +19,7 @@
         <nav class="navbar navbar-fixed-top">
             <form class="form-inline my-2 my-lg-0">
                 <a class="nav-item" href="#"><img width="220" src="./img/logo-blanco.png"></a>
-                <a href="#" class="navbar-right btn-salir btn btn-success btn-lg">
+                <a onclick="logout()" href="#" class="navbar-right btn-salir btn btn-success btn-lg">
                     Salir <span class="glyphicon glyphicon-log-out"></span> 
                 </a>
             </form>
