--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,43 +43,43 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Jacob</td>
                         <td>Thornton</td>
                         <td>@fat</td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
+                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
                         <td>Larry</td>
                         <td>the Bird</td>
                         <td>@twitter</td>
