--- a/public_html/login.html
+++ b/public_html/login.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/login.css">
+    <script src="./js/login.js"></script>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>Login - ParKING</title>
@@ -21,11 +23,11 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <section class="form-login">
-                    <form>
+                    <form action="#">
                         <img src="./img/logo.png">
-                        <input type="text" placeholder="Email" class="form-control"/>
-                        <input type="password" class="form-control" placeholder="Contraseña"/>
-                        <button class="btn btn-lg btn-primary btn-block">Ingresar</button>             
+                        <input type="text" placeholder="Email" id="email-txt" class="form-control"/>
+                        <input type="password" class="form-control" id="pass-txt" placeholder="Contraseña"/>
+                        <input type="button" onclick="login()" class="btn btn-lg btn-primary btn-block" value="Ingresar"/>             
                     </form>                 
                 </section>  
             </div>     
