--- a/public_html/login.html
+++ b/public_html/login.html
@@ -26,10 +26,13 @@
                     <form action="#">
                         <img src="./img/logo.png">
                         <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="email" type="text" class="form-control" name="email" placeholder="Email">
-                              </div>
-                        <input type="password" class="form-control" id="pass-txt" placeholder="Contraseña"/>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input id="email-txt" type="text" class="form-control" name="email" placeholder="Email">
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input id="pass-txt" type="text" class="form-control" name="pass" placeholder="Contraseña">
+                        </div>
                         <input type="button" onclick="login()" class="btn btn-lg btn-primary btn-block" value="Ingresar"/>             
                     </form>                 
                 </section>  
