--- a/public_html/index.html
+++ b/public_html/index.html
@@ -117,8 +117,7 @@
                     </div>
                     <div class="modal-body">
                         <form class="form-estac" action="#">
-                            <label>Patente</label>
-                            <input type="text" id="patente-txt"/>
+                            <input type="text" placeholder="Patente" class="form-control" id="patente-txt"/>
                         </form>
                     </div>
                     <div class="modal-footer">
