--- a/public_html/index.html
+++ b/public_html/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                      <button type="button" class="btn btn-primary">Añadir</button>
+                      <button type="button" class="btn btn-primary" onclick="agregarAuto()">Añadir</button>
                     </div>
                   </div>
                 </div>
