vamo a flashiar cosas

--- a/public_html/login.html
+++ b/public_html/login.html
@@ -25,11 +25,11 @@
                 <section class="form-login">
                     <form action="#">
                         <img src="./img/logo.png">
-                        <div class="input-group">
+                        <div class="input-group" id="input-group-mail">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                             <input id="email-txt" type="text" class="form-control" name="email" placeholder="Email">
                         </div>
-                        <div class="input-group">
+                        <div class="input-group" id="input-group-pass">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input id="pass-txt" type="text" class="form-control" name="pass" placeholder="Contraseña">
                         </div>
