--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,13 +32,13 @@
                 <button type="button" class="btn-success btn btn-lg" data-toggle="modal" data-target="#modalAgregar">Agregar</button>
                 <button type="button" class="btn-danger btn btn-lg">Sacar</button>
             </div>
-            <table class="table">
+            <table class="table" id="grilla">
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Username</th>
+                        <th scope="col">Patente</th>
+                        <th scope="col">Usuario</th>
+                        <th scope="col">Fecha</th>
                     </tr>
                 </thead>
                 <tbody>
