--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,7 +10,7 @@
     <script> var exports = {}; </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/grid-creator.js"></script>
-    <script src="./js/index-functions.js"></script>
+    <script src="./js/functions/index-functions.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>ParKING</title>
@@ -33,60 +33,7 @@
                 <button type="button" class="btn-success btn btn-lg" data-toggle="modal" data-target="#modalAgregar">Agregar</button>
                 <button type="button" class="btn-danger btn btn-lg">Sacar</button>
             </div>
-            <table class="table" id="grilla">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Patente</th>
-                        <th scope="col">Usuario</th>
-                        <th scope="col">Fecha</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><input type="checkbox" id="checkbox1"></th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
-                </tbody>
-            </table>
+            <table class="table" id="grilla"> <!-- Se genera dinamicamente --> </table>
             <div class="btn-toolbar mb-3" role="toolbar">
                 <div class="btn-group mr-2" role="group">
                     <button type="button" class="btn btn-primary">
