tamo activo tamo activo tamo en vivo

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,11 @@
     </header>
     <section class="row container-section">
         <h2>Estacionamiento</h2>
+        <div class="btn-group btn-group-grillas" role="group" aria-label="...">
+            <button onclick="crearGrillaAutos()" type="button" class="btn btn-default">Estacionamiento</button>
+            <button onclick="crearGrillaUsuarios()" type="button" class="btn btn-default">Usuarios</button>
+            <button onclick="crearGrillaPagos()" type="button" class="btn btn-default">Pagos</button>
+        </div>
         <div class="btn-group btn-ab" role="group" aria-label="...">
             <button type="button" class="btn-success btn btn-lg" data-toggle="modal" data-target="#modalAgregar">Agregar</button>
             <button type="button" class="btn-danger btn btn-lg">Sacar</button>
