--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <script> var exports = {}; </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./js/servicor.js"></script>
+    <script src="./js/servidor.js"></script>
     <script src="./js/grid-creator.js"></script>
     <script src="./js/session.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
