--- a/public_html/index.html
+++ b/public_html/index.html
@@ -78,10 +78,14 @@
         </div>
     </div>
 
-    <div class="spinner">
-        <h1>hola</h1>
+    <div class="modal fade" id="modalSpinner" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <img src="img/spinner.gif" id="spinner-img"></br>
+                <p id="spinner-txt">Cargando...</p>
+            </div>
+        </div>
     </div>
-
 
 </body>
 </html>
