--- a/public_html/index.html
+++ b/public_html/index.html
@@ -58,7 +58,7 @@
 
     <div class="modal fade" id="modalAgregar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" id="modal-content-patente">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Añadir auto</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -80,7 +80,7 @@
 
     <div class="modal fade" id="modalSpinner" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" id="modal-content-spinner">
                 <img src="img/spinner.gif" id="spinner-img"></br>
                 <p id="spinner-txt">Cargando...</p>
             </div>
