--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="btn-group btn-ab" role="group" aria-label="...">
             <button type="button" class="btn-success btn btn-lg" data-toggle="modal" data-target="#modalAgregar">Agregar</button>
-            <button type="button" class="btn-danger btn btn-lg">Sacar</button>
+            <button type="button" class="btn-danger btn btn-lg" id="btn-eliminar">Sacar</button>
         </div>
         <table class="table" id="grilla"> <!-- Se genera dinamicamente --> </table>
         <div class="btn-toolbar mb-3" role="toolbar">
