uff fno hago commit hace bocha

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" onclick="agregarAuto()">Añadir</button>
+                    <button type="button" class="btn btn-primary" id="btn-agregar-modal">Añadir</button>
                 </div>
             </div>
         </div>
