ATC (a todo codigo)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -67,7 +67,9 @@
                 </div>
                 <div class="modal-body">
                     <form class="form-estac" action="#">
-                        <input type="text" placeholder="Patente" class="form-control" id="patente-txt"/>
+                        <div class="input-group" id="input-group-ingresar">
+                            <input type="text" placeholder="Ingresar" class="form-control" id="ingresar-txt"/>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
