--- a/public_html/login.html
+++ b/public_html/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/login.css">
+    <script src="./js/servidor.js"></script>
     <script src="./js/session.js"></script>
     <script src="./js/functions/login-functions.js"></script>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
