--- a/public_html/login.html
+++ b/public_html/login.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/login.css">
     <script src="./js/servidor.js"></script>
     <script src="./js/session.js"></script>
-    <script src="./js/functions/login-functions.js"></script>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -34,9 +33,12 @@
                         <div class="input-group" id="input-group-pass">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input id="pass-txt" type="text" class="form-control" name="pass" placeholder="Contraseña">
+                        </div>   
+                        <div class="input-group" id="input-group-pass">
+                            <span id="mensaje-login"></span> 
                         </div>
                         <input type="button" onclick="login()" class="btn btn-lg btn-primary btn-block" value="Ingresar"/>             
-                    </form>                 
+                    </form>             
                 </section>  
             </div>     
         </div>           
